correcion about me

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 		<div class="contenido">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
-
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+						<img src="img/img-perfil.jpg" alt="photp-perfil">
 					</div>
-					<div class="col-md-6">
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 						<h3 class="sub">Sobre Mí</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet necessitatibus rerum voluptate aspernatur deleniti eligendi quam debitis, expedita pariatur excepturi, delectus inventore quidem? Delectus fugit doloribus quasi beatae adipisci unde.</p>
 						<button type="button" class="btn btn-info">Descarga mi CV</button>
