--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<title>Evelyn Farfan</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/jquery.fullpage.css">
+	<link rel="stylesheet" href="fuente/sample.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 	<header class="">
 		<div class="menu">
-			<nav id="menu-b" class="navbar navbar-default navbar-fixed-top">
+			<!-- <nav id="menu-b" class="navbar navbar-default navbar-fixed-top">
 			  <div class="container">
 			    <div class="navbar-header">
 			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -32,7 +32,13 @@
 			      </ul>
 			    </div>
 			  </div>
-			</nav>
+			</nav> -->
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><img src="img/logoh.png" alt="logo"></div>
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-right"><img src="img/menu-ha.png" alt=""></div>
+				</div>
+			</div>
 		</div>
 		<div class="contLogo">
 			<div class="container">
@@ -49,11 +55,15 @@
 		<div class="contenido">
 			<div class="container">
 				<div class="row">
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-color.png" alt="line-color"></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub text-center">SOBRE MÍ</p></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-color.png" alt="line-color"></div>
+				</div>
+				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 						<img src="img/img-perfil.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-						<h3 class="sub">Sobre Mí</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet necessitatibus rerum voluptate aspernatur deleniti eligendi quam debitis, expedita pariatur excepturi, delectus inventore quidem? Delectus fugit doloribus quasi beatae adipisci unde.</p>
 						<button type="button" class="btn btn-info">Descarga mi CV</button>
 					</div>
