--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
 			</nav> -->
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><img src="img/logoh.png" alt="logo"></div>
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-right"><img src="img/menu-ha.png" alt=""></div>
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><img class="img-logo" src="img/logoh2.png" alt="logo"></div>
+					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-right"><i id="menu-hamb" class="glyphicon glyphicon-menu-hamburger"></i></div>
 				</div>
 			</div>
 		</div>
+
 		<div class="contLogo">
 			<div class="container">
 				<div class="row">
