--- a/index.html
+++ b/index.html
@@ -10,29 +10,43 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
+	<div class="zonaMenu">
+		 	<ul>
+		 		<li>
+		 			<a href="historia.html" class="historia">
+		 				Más de 300 años de historia económica
+		 			</a>
+		 		</li>
+		 		<li>
+		 			<a href="investigacion.html" class="investigacion">
+		 				Dos décadas de investigación
+		 			</a>
+		 		</li>
+		 		<li>
+		 			<a href="libro.html" class="libro">
+		 				El libro que cambiará el futuro económico del Perú
+		 			</a>
+		 		</li>
+		  		<li>
+		 			<a href="sabias.html" class="sabias">
+		 				Sabías que...
+		 			</a>
+		 		</li>		
+		   		<li>
+		 			<a href="expertos.html" class="expertos">
+		 				Escuchando a los expertos
+		 			</a>
+		 		</li>	
+		    	<li>
+		 			<a href="autor.html" class="autor">
+		 				Datos del autor
+		 			</a>
+		 		</li>	
+		 	</ul>
+	</div>
+
 	<header class="">
 		<div class="menu">
-			<!-- <nav id="menu-b" class="navbar navbar-default navbar-fixed-top">
-			  <div class="container">
-			    <div class="navbar-header">
-			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-			        <span class="sr-only">Toggle navigation</span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			      </button>
-			      <a class="navbar-brand" href="#"><img src="img/logoh.png" alt="logo"></a>
-			    </div>
-			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			      <ul class="nav navbar-nav navbar-right">
-			        <li><a href="#">About Me</a></li>
-			        <li><a href="#">link</a></li>
-			        <li><a href="#">Portfolio</a></li>
-			        <li><a href="#">Contact</a></li>
-			      </ul>
-			    </div>
-			  </div>
-			</nav> -->
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><img class="img-logo" src="img/logoh2.png" alt="logo"></div>
@@ -55,13 +69,13 @@
 	<section class="bloqueUno">
 		<div class="contenido">
 			<div class="container">
-				<div class="row">
+				<div id="cont-sub" class="row">
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-color.png" alt="line-color"></div>
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub text-center">SOBRE MÍ</p></div>
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-color.png" alt="line-color"></div>
 				</div>
 				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
 						<img src="img/img-perfil.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
@@ -75,13 +89,18 @@
 
 	<section class="bloqueDos">
 		<div class="container">
+			<div id="cont-sub" class="row">
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">PORTAFOLIO</p></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
+				</div>
 			<div class="row">
-				<div class="col-md-6">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam deserunt neque! Porro esse ducimus, provident error nihil. Similique assumenda ipsa mollitia dolor eaque voluptate quam tenetur necessitatibus sequi temporibus!</p>
-				</div>
-				<div class="col-md-6">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet necessitatibus rerum voluptate aspernatur deleniti eligendi quam debitis, expedita pariatur excepturi, delectus inventore quidem? Delectus fugit doloribus quasi beatae adipisci unde.</p>
-				</div>
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div>
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div><div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div>
+			</div>
+			<div class="row">
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div>
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div><div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div>
 			</div>
 		</div>
 	</section>
