--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet necessitatibus rerum voluptate aspernatur deleniti eligendi quam debitis, expedita pariatur excepturi, delectus inventore quidem? Delectus fugit doloribus quasi beatae adipisci unde.</p>
 						<button type="button" class="btn btn-info">Descarga mi CV</button>
+						<div class="row">
+							<div class="col-md-4"></div>
+							<div class="col-md-4"></div>
+							<div class="col-md-4"></div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -105,9 +110,47 @@
 		</div>
 	</section>
 
+	<section class="bloqueTres">
+	</section>
+
+	<section class="bloqueCuatro">
+		<div class="container">
+			<div id="cont-sub" class="row">
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">CONTACTO</p></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 text-center">
+					<form action="formulario">
+						<input class="form" type="text" placeholder="Nombre">
+						<input class="form" type="text" placeholder="Email">
+						<textarea class="form" name="textarea" id="" cols="30" rows="10" placeholder="Comentario"></textarea>
+						<button type="button">Enviar</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer>
+		<div class="container">
+			<div id="cont-sub" class="row">
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">AROUND THE WEB</p></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 text-center">
+				</div>
+			</div>
+		</div>
+	</footer>
+
 	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/scroll.js"></script>
 </body>
 </html>
 
+#2C3D4F
