--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="fuente/sample.css">
+	<link rel="shortcut icon" href="img/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
+
 	<div class="zonaMenu">
 		 	<ul>
 		 		<li>
@@ -45,7 +47,7 @@
 		 	</ul>
 	</div>
 
-	<header class="">
+	<header>
 		<div class="menu">
 			<div class="container">
 				<div class="row">
@@ -79,7 +81,8 @@
 						<img src="img/img-perfil.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet necessitatibus rerum voluptate aspernatur deleniti eligendi quam debitis, expedita pariatur excepturi, delectus inventore quidem? Delectus fugit doloribus quasi beatae adipisci unde.</p>
+						<p> Mi nombre es Evelyn Farfan, tengo 23 años, 
+						en un puesto que me permita plasmar los conocimientos adquiridos en mis años de estudio, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad , además de continuar preparándome para desarrollar y mantener actualizado mi campo profesional.</p>
 						<button type="button" class="btn btn-info">Descarga mi CV</button>
 						<div class="row">
 							<div class="col-md-4"></div>
@@ -92,28 +95,106 @@
 		</div>
 	</section>
 
-	<section class="bloqueDos">
+	<section class="skills">
 		<div class="container">
 			<div id="cont-sub" class="row">
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">PORTAFOLIO</p></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
-				</div>
-			<div class="row">
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div>
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div><div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div>
+				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
+				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">HABILIDADES</p></div>
+				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
 			</div>
 			<div class="row">
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div>
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div><div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4"><img class="img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></div>
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+					<div class="skillbar clearfix " data-percent="70%">
+						<div class="skillbar-title" style="background: #cccccc;"><span>HTML5</span></div>
+						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skill-bar-percent">70%</div>
+					</div> <!-- End Skill Bar -->
+					<div class="skillbar clearfix " data-percent="75%">
+						<div class="skillbar-title" style="background: #cccccc;"><span>CSS3</span></div>
+						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skill-bar-percent">70%</div>
+					</div> <!-- End Skill Bar -->
+					<div class="skillbar clearfix " data-percent="50%">
+						<div class="skillbar-title" style="background: #cccccc;"><span>JavaScript</span></div>
+						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skill-bar-percent">50%</div>
+					</div> <!-- End Skill Bar -->
+					<div class="skillbar clearfix " data-percent="40%">
+						<div class="skillbar-title" style="background: #cccccc;"><span>JQuery</span></div>
+						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skill-bar-percent">40%</div>
+					</div> <!-- End Skill Bar -->
+					<div class="skillbar clearfix " data-percent="60%">
+						<div class="skillbar-title" style="background: #cccccc;"><span>Bootstrap</span></div>
+						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skill-bar-percent">60%</div>
+					</div> <!-- End Skill Bar -->
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+					<div class="skillbar clearfix " data-percent="50%">
+						<div class="skillbar-title" style="background: #cccccc;"><span>GitHub</span></div>
+						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skill-bar-percent">50%</div>
+					</div> <!-- End Skill Bar -->
+					<div class="skillbar clearfix " data-percent="70%">
+						<div class="skillbar-title" style="background: #cccccc;"><span>Photoshop</span></div>
+						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skill-bar-percent">70%</div>
+					</div> <!-- End Skill Bar -->
+					<div class="skillbar clearfix " data-percent="70%">
+						<div class="skillbar-title" style="background: #cccccc;"><span>Illustrator</span></div>
+						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skill-bar-percent">70%</div>
+					</div> <!-- End Skill Bar -->
+					<div class="skillbar clearfix " data-percent="80%">
+						<div class="skillbar-title" style="background: #cccccc;"><span>InDesign</span></div>
+						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skill-bar-percent">80%</div>
+					</div> <!-- End Skill Bar -->
+				</div>
 			</div>
 		</div>
 	</section>
 
-	<section class="bloqueTres">
+	<section class="bloqueDos ">
+		<div class="container">
+			<div id="cont-sub" class="row">
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-color.png" alt="line-color"></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub text-center">PORTAFOLIO</p></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-color.png" alt="line-color"></div>
+				</div>
+			<div class="row">
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<a data-toggle="modal" href="#modal-uno"><img class="imgProjecto center-block img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></a>
+					<div class="colorHover">
+			
+					</div>
+				</div>
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<a data-toggle="modal" href="#modal-dos"><img class="imgProjecto center-block img-responsive" src="img/portafolio2.jpg" alt="portafolio-dos"></a>
+					<div class="colorHover">
+			
+					</div>
+				</div>
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<a data-toggle="modal" href="#modal-tres"><img class="imgProjecto center-block img-responsive" src="img/portafolio3.jpg" alt="portafolio-tres"></a>
+				</div>
+			</div>
+			<div class="row">
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<a data-toggle="modal" href="#modal-cuatro"><img class="imgProjecto center-block img-responsive" src="img/portafolio4.jpg" alt="portafolio-cuatro"></a>
+				</div>
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<a data-toggle="modal" href="#modal-cinco"><img class="imgProjecto center-block img-responsive" src="img/portafolio5.jpg" alt="portafolio-cinco"></a>
+				</div>
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<a data-toggle="modal" href="#modal-seis"><img class="imgProjecto center-block img-responsive" src="img/portafolio1.jpg" alt="portafolio-seis"></a>
+				</div>
+			</div>
+		</div>
 	</section>
 
-	<section class="bloqueCuatro">
+<!-- 	<section class="bloqueCuatro">
 		<div class="container">
 			<div id="cont-sub" class="row">
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
@@ -131,13 +212,13 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<footer>
 		<div class="container">
 			<div id="cont-sub" class="row">
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">AROUND THE WEB</p></div>
+					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">CONTACTO</p></div>
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
 			</div>
 			<div class="row">
@@ -147,8 +228,196 @@
 		</div>
 	</footer>
 
+
+	<div class="modal fade" id="modal-uno" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div id="contModal" class="modal-dialog" role="document">
+	    <div class="modal-content">
+
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	        <span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	      </div>
+
+	      <div class="modal-body">
+	      	<div id="contProject" class="container">
+	      		<div class="row">
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="img-proyecto"><img class="img-responsive" src="img/portafolio1-1.jpg" alt="img-proyecto"></div>
+	      			</div>
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="codigo"></div>
+	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="linkPojects">
+	      					<button type="button" class="btn btn-info">GitHub</button>
+	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      				</div>
+	      			</div>
+	      		</div>
+	      	</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="modal fade" id="modal-dos" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div id="contModal" class="modal-dialog" role="document">
+	    <div class="modal-content">
+
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	        <span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	      </div>
+
+	      <div class="modal-body">
+	      	<div id="contProject" class="container">
+	      		<div class="row">
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="img-proyecto"><img class="img-responsive" src="img/portafolio2-1.jpg" alt="img-proyecto"></div>
+	      			</div>
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="codigo"></div>
+	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="linkPojects">
+	      					<button type="button" class="btn btn-info">GitHub</button>
+	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      				</div>
+	      			</div>
+	      		</div>
+	      	</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="modal fade" id="modal-tres" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div id="contModal" class="modal-dialog" role="document">
+	    <div class="modal-content">
+
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	        <span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	      </div>
+
+	      <div class="modal-body">
+	      	<div id="contProject" class="container">
+	      		<div class="row">
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="img-proyecto"><img class="img-responsive" src="img/portafolio3-1.jpg" alt="img-proyecto"></div>
+	      			</div>
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="codigo"></div>
+	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="linkPojects">
+	      					<button type="button" class="btn btn-info">GitHub</button>
+	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      				</div>
+	      			</div>
+	      		</div>
+	      	</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="modal fade" id="modal-cuatro" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div id="contModal" class="modal-dialog" role="document">
+	    <div class="modal-content">
+
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	        <span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	      </div>
+
+	      <div class="modal-body">
+	      	<div id="contProject" class="container">
+	      		<div class="row">
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="img-proyecto"><img class="img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
+	      			</div>
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="codigo"></div>
+	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="linkPojects">
+	      					<button type="button" class="btn btn-info">GitHub</button>
+	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      				</div>
+	      			</div>
+	      		</div>
+	      	</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="modal fade" id="modal-cinco" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div id="contModal" class="modal-dialog" role="document">
+	    <div class="modal-content">
+
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	        <span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	      </div>
+
+	      <div class="modal-body">
+	      	<div id="contProject" class="container">
+	      		<div class="row">
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio5-2.png" alt="img-proyecto"></div>
+	      			</div>
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="codigo"></div>
+	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="linkPojects">
+	      					<button type="button" class="btn btn-info">GitHub</button>
+	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      				</div>
+	      			</div>
+	      		</div>
+	      	</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="modal fade" id="modal-seis" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div id="contModal" class="modal-dialog" role="document">
+	    <div class="modal-content">
+
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	        <span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	      </div>
+
+	      <div class="modal-body">
+	      	<div id="contProject" class="container">
+	      		<div class="row">
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="img-proyecto"><img class="img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
+	      			</div>
+	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	      				<div class="codigo"></div>
+	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="linkPojects">
+	      					<button type="button" class="btn btn-info">GitHub</button>
+	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      				</div>
+	      			</div>
+	      		</div>
+	      	</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
 	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/scroll.js"></script>
+	<script type="text/javascript" src="js/skills.js"></script>
 </body>
 </html>
