--- a/index.html
+++ b/index.html
@@ -194,26 +194,6 @@
 		</div>
 	</section>
 
-<!-- 	<section class="bloqueCuatro">
-		<div class="container">
-			<div id="cont-sub" class="row">
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">CONTACTO</p></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 text-center">
-					<form action="formulario">
-						<input class="form" type="text" placeholder="Nombre">
-						<input class="form" type="text" placeholder="Email">
-						<textarea class="form" name="textarea" id="" cols="30" rows="10" placeholder="Comentario"></textarea>
-						<button type="button">Enviar</button>
-					</form>
-				</div>
-			</div>
-		</div>
-	</section> -->
-
 	<footer>
 		<div class="container">
 			<div id="cont-sub" class="row">
@@ -243,7 +223,7 @@
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="img-responsive" src="img/portafolio1-1.jpg" alt="img-proyecto"></div>
+	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio1-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<div class="codigo"></div>
@@ -274,7 +254,7 @@
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="img-responsive" src="img/portafolio2-1.jpg" alt="img-proyecto"></div>
+	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio2-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<div class="codigo"></div>
@@ -305,7 +285,7 @@
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="img-responsive" src="img/portafolio3-1.jpg" alt="img-proyecto"></div>
+	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio3-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<div class="codigo"></div>
@@ -336,7 +316,7 @@
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
+	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<div class="codigo"></div>
@@ -398,7 +378,7 @@
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
+	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<div class="codigo"></div>
