--- a/index.html
+++ b/index.html
@@ -47,16 +47,34 @@
 		 	</ul>
 	</div>
 
-	<header>
-		<div class="menu">
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"><img class="img-logo" src="img/logoh2.png" alt="logo"></div>
-					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 text-right"><i id="menu-hamb" class="glyphicon glyphicon-menu-hamburger"></i></div>
-				</div>
-			</div>
-		</div>
+	<header>	
+		<div>
+			<nav class="navbar navbar-default navbar-fixed-top">
+			  <div class="container">
+			    <!-- Brand and toggle get grouped for better mobile display -->
+			    <div class="navbar-header">
+			      <button type="button" id="menu-hamb" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </button>
+			      <a class="navbar-brand" href="#">Brand</a>
+			    </div>
 
+			    <!-- Collect the nav links, forms, and other content for toggling -->
+			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			      <ul id="menu-none" class="nav navbar-nav navbar-right">
+			        <li><a href="#">Inicio</a></li>
+			       	<li><a href="#">Sobre Mí</a></li>
+			       	<li><a href="#">Habilidades</a></li>
+			       	<li><a href="#">Proyectos</a></li>
+			       	<li><a href="#">Contacto</a></li>
+			      </ul>
+			    </div><!-- /.navbar-collapse -->
+			  </div><!-- /.container-fluid -->
+			</nav>
+		</div>
 		<div class="contLogo">
 			<div class="container">
 				<div class="row">
@@ -195,7 +213,7 @@
 	</section>
 
 	<footer>
-		<div class="container">
+		<!-- <div class="container">
 			<div id="cont-sub" class="row">
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">CONTACTO</p></div>
@@ -203,6 +221,14 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 text-center">
+				</div>
+			</div>
+		</div> -->
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6"></div>
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+					<p>e.farfanvaldivia@gmail.com</p>
 				</div>
 			</div>
 		</div>
@@ -216,7 +242,7 @@
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	        <p class="tituloProyecto">MI PORTAFOLIO</p>
 	      </div>
 
 	      <div class="modal-body">
@@ -226,7 +252,8 @@
 	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio1-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="codigo"></div>
+	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
+	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
 	      				<div class="linkPojects">
 	      					<button type="button" class="btn btn-info">GitHub</button>
@@ -247,7 +274,7 @@
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	        <p class="tituloProyecto">GRAXPO</p>
 	      </div>
 
 	      <div class="modal-body">
@@ -257,7 +284,8 @@
 	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio2-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="codigo"></div>
+	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
+	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
 	      				<div class="linkPojects">
 	      					<button type="button" class="btn btn-info">GitHub</button>
@@ -278,7 +306,7 @@
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	        <p class="tituloProyecto">TAKE</p>
 	      </div>
 
 	      <div class="modal-body">
@@ -288,7 +316,8 @@
 	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio3-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="codigo"></div>
+	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
+	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
 	      				<div class="linkPojects">
 	      					<button type="button" class="btn btn-info">GitHub</button>
@@ -309,7 +338,7 @@
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	        <p class="tituloProyecto">TRELLO</p>
 	      </div>
 
 	      <div class="modal-body">
@@ -319,7 +348,8 @@
 	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="codigo"></div>
+	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
+	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
 	      				<div class="linkPojects">
 	      					<button type="button" class="btn btn-info">GitHub</button>
@@ -340,7 +370,7 @@
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	        <p class="tituloProyecto">LYFT</p>
 	      </div>
 
 	      <div class="modal-body">
@@ -350,7 +380,8 @@
 	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio5-2.png" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="codigo"></div>
+	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
+	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
 	      				<div class="linkPojects">
 	      					<button type="button" class="btn btn-info">GitHub</button>
@@ -371,7 +402,7 @@
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	       	<p class="tituloProyecto">NEW PROJECT</p>
 	      </div>
 
 	      <div class="modal-body">
@@ -381,7 +412,8 @@
 	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="codigo"></div>
+	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
+	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
 	      				<div class="linkPojects">
 	      					<button type="button" class="btn btn-info">GitHub</button>
