--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
 	<header>	
 		<div>
 			<nav id="menu" class="navbar navbar-default navbar-fixed-top" role="navigation">
-			  <div class="container">
-			    <div class="navbar-header">
-			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-			        <span class="sr-only">Toggle navigation</span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			      </button>
-			      <a id="logo-nav" class="navbar-brand" href="#header"><img id="logoH" class="img-responsive" src="img/logoh2.png" alt="img-logo"></a>
-			    </div>
-			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			      <ul class="nav navbar-nav navbar-right">
-			        <li class="active"><a id="menu_a" href="#">HOME</a></li>
-			        <li><a id="menu_a" href="#seccion1">SOBRE MÍ</a></li>
-			        <li><a id="menu_a" href="#seccion2">HABILIDADES</a></li>
-			        <li><a id="menu_a" href="#seccion3">PORTAFOLIO</a></li>
-			        <li><a id="menu_a" href="#seccion4">CONTACTO</a></li>
-						</ul>
-			    </div>
-			  </div>
+				  <div class="container">
+				    <div class="navbar-header">
+				      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				        <span class="sr-only">Toggle navigation</span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				      </button>
+				      <a id="logo-nav" class="navbar-brand" href="#header"><img id="logoH" src="img/logoh2.png" alt="img-logo"></a>
+				    </div>
+				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				      <ul class="nav navbar-nav navbar-right">
+				        <li class="active"><a id="menu_a" href="#">HOME</a></li>
+				        <li><a id="menu_a" href="#seccion1">SOBRE MÍ</a></li>
+				        <li><a id="menu_a" href="#seccion2">HABILIDADES</a></li>
+				        <li><a id="menu_a" href="#seccion3">PROYECTOS</a></li>
+				        <li><a id="menu_a" href="#seccion4">CONTACTO</a></li>
+				      </ul>
+				    </div>
+				  </div>
 			</nav>
 		</div>
 		<div class="contLogo">
@@ -85,50 +85,50 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 					<div class="skillbar clearfix " data-percent="70%">
-						<div class="skillbar-title" style="background: #cccccc;"><span>HTML5</span></div>
-						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skillbar-title" style="background: #4ca3a5;"><span>HTML5</span></div>
+						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">70%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="75%">
-						<div class="skillbar-title" style="background: #cccccc;"><span>CSS3</span></div>
-						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skillbar-title" style="background: #4ca3a5;"><span>CSS3</span></div>
+						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">70%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="50%">
-						<div class="skillbar-title" style="background: #cccccc;"><span>JavaScript</span></div>
-						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skillbar-title" style="background: #4ca3a5;"><span>JavaScript</span></div>
+						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">50%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="40%">
-						<div class="skillbar-title" style="background: #cccccc;"><span>JQuery</span></div>
-						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skillbar-title" style="background: #4ca3a5;"><span>JQuery</span></div>
+						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">40%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="60%">
-						<div class="skillbar-title" style="background: #cccccc;"><span>Bootstrap</span></div>
-						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skillbar-title" style="background: #4ca3a5;"><span>Bootstrap</span></div>
+						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">60%</div>
 					</div> <!-- End Skill Bar -->
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 					<div class="skillbar clearfix " data-percent="50%">
-						<div class="skillbar-title" style="background: #cccccc;"><span>GitHub</span></div>
-						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skillbar-title" style="background: #4ca3a5;"><span>GitHub</span></div>
+						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">50%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="70%">
-						<div class="skillbar-title" style="background: #cccccc;"><span>Photoshop</span></div>
-						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skillbar-title" style="background: #4ca3a5;"><span>Photoshop</span></div>
+						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">70%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="70%">
-						<div class="skillbar-title" style="background: #cccccc;"><span>Illustrator</span></div>
-						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skillbar-title" style="background: #4ca3a5;"><span>Illustrator</span></div>
+						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">70%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="80%">
-						<div class="skillbar-title" style="background: #cccccc;"><span>InDesign</span></div>
-						<div class="skillbar-bar" style="background: #cccccc;"></div>
+						<div class="skillbar-title" style="background: #4ca3a5;"><span>InDesign</span></div>
+						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">80%</div>
 					</div> <!-- End Skill Bar -->
 				</div>
