--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Evelyn Farfan</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/ionicons.css">
 	<link rel="stylesheet" href="fuente/sample.css">
 	<link rel="shortcut icon" href="img/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -51,18 +52,16 @@
 	<section id="seccion1" class="bloqueUno">
 		<div class="contenido">
 			<div class="container">
-				<div id="cont-sub" class="row">
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-color.png" alt="line-color"></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub text-center">SOBRE MÍ</p></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-color.png" alt="line-color"></div>
-				</div>
 				<div class="row">
+					<div class="contTituloColor">
+						<p class="sub text-center">SOBRE MÍ</p>
+					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
 						<img src="img/img-perfil.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 						<p> Mi nombre es Evelyn Farfan, tengo 23 años, 
-						en un puesto que me permita plasmar los conocimientos adquiridos en mis años de estudio, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad , además de continuar preparándome para desarrollar y mantener actualizado mi campo profesional.</p>
+						en un puesto que me permita plasmar los conocimientos adquiridos en mis años de estudio, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizandome en mi campo profesional.</p>
 						<button type="button" class="btn btn-info">Descarga mi CV</button>
 						<div class="row">
 							<div class="col-md-4"></div>
@@ -77,12 +76,10 @@
 
 	<section id="seccion2" class="skills">
 		<div class="container">
-			<div id="cont-sub" class="row">
-				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
-				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">HABILIDADES</p></div>
-				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
-			</div>
 			<div class="row">
+				<div class="contTituloWhite">
+						<p class="sub2 text-center">HABILIDADES</p>
+					</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>HTML5</span></div>
@@ -139,10 +136,10 @@
 	<section id="seccion3" class="bloqueDos ">
 		<div class="container">
 			<div id="cont-sub" class="row">
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-color.png" alt="line-color"></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub text-center">PORTAFOLIO</p></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-color.png" alt="line-color"></div>
+				<div class="contTituloColor">
+					<p class="sub text-center">PROYECTOS</p>
 				</div>
+			</div>
 			<div class="row">
 				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 					<a data-toggle="modal" href="#modal-uno"><img class="imgProjecto center-block img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></a>
@@ -174,22 +171,13 @@
 		</div>
 	</section>
 
-	<footer id="seccion4">
-		<!-- <div class="container">
-			<div id="cont-sub" class="row">
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><p class="sub2 text-center">CONTACTO</p></div>
-					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4"><img class="img-responsive" src="img/line-white.png" alt="line-color"></div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 text-center">
-				</div>
-			</div>
-		</div> -->
+	<footer id="seccion4" class="footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6"></div>
-				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-right">
+					<a href="#"><i class="iconRedes ion-social-github"></i></a>
+					<a href="#"><i class="iconRedes ion-social-linkedin"></i></a>
 					<p>e.farfanvaldivia@gmail.com</p>
 				</div>
 			</div>
