--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
 						<img id="img-logo" class="img-responsive" src="img/logo.png" alt="logo">
 					</div>
 				</div>
+				<div class="scroll row">
+					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 text-center">
+						<div class="scrolldown">
+							<i class="glyphicon glyphicon-menu-down iconMouse"></i>
+							<p class="white">SCROLL DOWN</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</header>
